--- a/DemoWeb/Views/User/_AddEditUser.cshtml
+++ b/DemoWeb/Views/User/_AddEditUser.cshtml
@@ -7,22 +7,25 @@
 </div>
 
 <div class="modal-body">
-<form action="" id="AddEditUserForm">
+    <form method="post" id="AddEditUserForm">
 
-    <input type="text" asp-for="Id" hidden>
+        <input type="text" asp-for="Id" hidden>
 
-    <div class="form-floating mb-3">
-        <input type="text" class="form-control" asp-for="Name" placeholder="name@example.com">
-        <label for="floatingInput">Name</label>
-    </div>
-    <div class="form-floating mb-3">
-        <input type="text" class="form-control" asp-for="Surname" placeholder="name@example.com">
-        <label for="floatingInput">Surname</label>
-    </div>
-    <div class="w-100 d-flex justify-content-end gap-2">
-        <button type="submit" class="btn btn-primary">@(Model.Id == 0 ? "Add" : "Edit") User</button>
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-    </div>
+        <div class="form-floating mb-3">
+            <input type="text" class="form-control" asp-for="Name" placeholder="name@example.com">
+            <label for="floatingInput">Name</label>
+            <span asp-validation-for="Name" class="text-danger"></span>
+        </div>
+        <div class="form-floating mb-3">
+            <input type="text" class="form-control" asp-for="Surname" placeholder="name@example.com">
+            <label for="floatingInput">Surname</label>
+        </div>
+        <div class="w-100 d-flex justify-content-end gap-2">
+            <button type="submit" class="btn btn-primary">@(Model.Id == 0 ? "Add" : "Edit") User</button>
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        </div>
 
-</form>
+    </form>
 </div>
+
+<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
