--- a/DemoWeb/Views/User/_UserDetail.cshtml
+++ b/DemoWeb/Views/User/_UserDetail.cshtml
@@ -1,18 +1,26 @@
-@* @model DemoWeb.DAL.ViewModels.UserListPaginationViewModel *@
-@model List<DemoWeb.DAL.ViewModels.UserDetailViewModel>
+@model DemoWeb.DAL.ViewModels.UserListPaginationViewModel
+@* @model List<DemoWeb.DAL.ViewModels.UserDetailViewModel> *@
 
 <table class="table table-striped text-center">
     <thead>
         <tr>
-            <th scope="col">Id</th>
-            <th scope="col">Name</th>
+            <th scope="col" data-colname="Id">
+                Id
+                <span class="sortArrow" data-sortOrder="asc" onclick="UserListPaginationAjax(1,this)"><i class="bi bi-arrow-up"></i></span>
+                <span class="sortArrow" data-sortOrder="desc" onclick="UserListPaginationAjax(1,this)"><i class="bi bi-arrow-down"></i></span>
+            </th>
+            <th scope="col" data-colname="Name">
+                Name
+                <span class="sortArrow" data-sortOrder="asc" onclick="UserListPaginationAjax(1,this)"> <i class="bi bi-arrow-up"></i></span>
+                <span class="sortArrow" data-sortOrder="desc" onclick="UserListPaginationAjax(1,this)"><i class="bi bi-arrow-down"></i></span>
+            </th>
             <th scope="col">surname</th>
             <th scope="col">Action</th>
         </tr>
     </thead>
     <tbody>
 
-        @foreach (var i in Model)
+        @foreach (var i in Model.Items)
         {
             <tr>
                 <td scope="row">@i.Id</td>
@@ -35,57 +43,34 @@
     </tbody>
 </table>
 
-@* <div class="pagination-section d-flex justify-content-end align-items-center gap-2 overflow-auto w-100">
+<div class="pagination-section d-flex justify-content-end align-items-center gap-2 overflow-auto w-100">
     <div class="d-flex justify-content-md-end align-items-center gap-2 w-100">
         <div>Items per page: </div>
-        <select class="form-select" style="width:68px ;" aria-label="Default select example"
-            id="pageSizeDropdown" onchange="UserListPaginationAjax(this.value,1)">
+        <select class="form-select" style="width:68px ;" aria-label="Default select example" id="pageSizeDropdown"
+            onchange="UserListPaginationAjax(1)">
 
-            <option value=2 selected="@(Model.Page.PageSize == 2 ? true : false)">2</option>
-            <option value=5 selected="@(Model.Page.PageSize == 5 ? true : false)">5</option>
-            <option value=10 selected="@(Model.Page.PageSize == 10 ? true : false)">10</option>
+            <option value=2 selected="@(Model.Page?.PageSize == 2 ? true : false)">2</option>
+            <option value=5 selected="@(Model.Page?.PageSize == 5 ? true : false)">5</option>
+            <option value=10 selected="@(Model.Page?.PageSize == 10 ? true : false)">10</option>
         </select>
-        <div>Showing @Model.Page.FromRec - @Model.Page.ToRec of @Model.Page.TotalRecord</div>
-    
+        <div>Showing @Model.Page?.FromRec - @Model.Page?.ToRec of @Model.Page?.TotalRecord</div>
 
-        <div onclick="UserListPaginationAjax(@Model.Page.PageSize,@Model.Page.CurrentPage-1)"
-            class="text-black @( Model.Page.CurrentPage > 1? " " : "disabled-button")" style="text-decoration: none;">
+
+        <div onclick="UserListPaginationAjax(@Model.Page?.CurrentPage-1)"
+            class="text-black @( Model.Page?.CurrentPage > 1? " " : "disabled-button")" style="text-decoration: none;">
             <div class="border p-2 px-3"> &lt; </div>
         </div>
 
 
-        <div onclick="UserListPaginationAjax(@Model.Page.PageSize, @Model.Page.CurrentPage+1)"
+        <div onclick="UserListPaginationAjax(@Model.Page.CurrentPage+1)"
             class="text-black  @(Model.Page.CurrentPage < Model.Page.TotalPages ? " " : "disabled-button")"
             style="text-decoration: none;">
             <div class="border p-2 px-3">&gt;</div>
         </div>
 
     </div>
-</div> *@
+</div>
 
-@* <script>
-    function UserListPaginationAjax(pageNumber,sortColumn,sortOrder) {
+<script>
 
-    pagesize=$("#pageSizeDropdown").val()
-
-    let searchkeyword = $("#user-search-field").val();
-
-        $.ajax({
-            url: "/User/UserListPV",
-            data: { 'pageSize': pageSize, 'pageNumber': pageNumber,'searchKeyword':searchkeyword,'sortColumn':sortColumn,'sortOrder':sortOrder},
-            type: "GET",
-            dataType: "html",
-            success: function (data) {
-                $("#user_list_section").html(data);
-                @* onPartialViewLoaded();  *@
-            @* },
-            error: function () {
-                $("#user_list_section").html('An error has occurred');
-            }
-        });
-    }
-
-     document.getElementById("user-search-field").addEventListener('keyup',()=>{ 
-        UserListPaginationAjax();
-    })
-</script> *@
+</script>
